--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "got": "^12.1.0",
     "jquery": "^3.6.0",
     "mongodb": "^4.7.0",
     "nodemon": "^2.0.16"
