update to my tears of JQuery woe

--- a/package.json
+++ b/package.json
@@ -1,18 +1,11 @@
 {
-  "name": "mock-template",
+  "name": "wine-api-safety-vest-gui",
   "version": "1.0.0",
-  "description": "",
+  "description": "How It's Made:",
   "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@zxing/library": "^0.19.1",
-    "body-parser": "^1.20.0",
+    "browserify": "^17.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
@@ -20,6 +13,20 @@
     "got": "^12.1.0",
     "jquery": "^3.6.0",
     "mongodb": "^4.7.0",
-    "nodemon": "^2.0.16"
-  }
+    "nodemon": "^2.0.18"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SafetyVest2789/wine-api-types-food-pairs.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/SafetyVest2789/wine-api-types-food-pairs/issues"
+  },
+  "homepage": "https://github.com/SafetyVest2789/wine-api-types-food-pairs#readme"
 }
