--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "got": "^12.1.0",
     "jquery": "^3.6.0",
-    "nodemon": "^2.0.18"
+    "lodash": "^4.17.21",
+    "nodemon": "^2.0.18",
+    "restify": "^10.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
